Fixed wrong padding in the projects page

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -458,7 +458,7 @@ a:focus {
 			"header"
 			"projects"
 			"footer";
-		padding: 2rem;
+		padding: 1rem;
 
 		@media (min-width: 768px) {
 			grid-template-areas:
